"""
pyrovelocity BUILD
"""

load("@pypi//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_test")
load("//bazel:python.bzl", "py_test_module_list")

# py_library(
#     name = "conftest",
#     srcs = ["conftest.py"],
# )

py_test_module_list(
    files = [
        "test_api.py",
        "test_config.py",
        "test_cytotrace.py",
        "test_data.py",
        "test_plot.py",
        "test_pyrovelocity.py",
        "test_trainer.py",
        "test_velocity_guide.py",
        "test_velocity_model.py",
        "test_velocity_module.py",
        "test_velocity.py",
    ],
    size = "small",
    tags = [""],
    deps = ["//src/pyrovelocity:pyrovelocity"],
)

py_test(
    name = "test_compressedpickle",
    srcs = ["test_compressedpickle.py"],
    size = "small",
    deps = [
        "//src/pyrovelocity:pyrovelocity",
        requirement("numpy"),
        requirement("pandas"),
        requirement("pytest"),
    ],
)

py_test(
    name = "test_criticality_index",
    srcs = ["test_criticality_index.py"],
    size = "small",
    deps = [
        "//src/pyrovelocity:pyrovelocity",
        requirement("anndata"),
        requirement("numpy"),
        requirement("pytest"),
        requirement("scvelo"),
    ],
)

py_test(
    name = "test_utils",
    srcs = ["test_utils.py"],
    size = "small",
    deps = [
        "//src/pyrovelocity:pyrovelocity",
        requirement("anndata"),
        requirement("hypothesis"),
        requirement("numpy"),
        requirement("pytest"),
    ],
)